@@ -22,7 +22,7 @@
 		</a>
 	</li>
 	<li>
-		<a href="https://github.com/pfpayments/woocommerce/releases/tag/2.0.3/">
+		<a href="https://github.com/pfpayments/woocommerce/releases/tag/2.0.4/">
 			Source
 		</a>
 	</li>
